# cxx-moved-exports-deprecation-via-inline-namespace

./: CMakeLists.txt  main.cc  moved.hh  old.hh  readme.md  version.hh  version_features.hh
